refactor:LineupIntegrationTest에 권한 검사 추가 및 관련 버그 수정